force-app/main/default/objects/sc_ext__Settings_Configuration__c/sc_ext__Settings_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Settings Configuration</label>
</CustomObject>