force-app/main/default/objects/sc_ext__Settings_Configuration__c/fields/sc_ext__Enable_View_By_User_in_Who_Sees_What__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Enable_View_By_User_in_Who_Sees_What__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable View By User in Who Sees What</label>
    <type>Checkbox</type>
</CustomField>