force-app/main/default/objects/sc_ext__Settings_Configuration__c/fields/sc_ext__Managed_Package_Fields__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Managed_Package_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow encryption for managed fields</label>
    <type>Checkbox</type>
</CustomField>