force-app/main/default/objects/sc_ext__Settings_Configuration__c/fields/sc_ext__Number_of_Records_for_Analysis__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Number_of_Records_for_Analysis__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Number of Fill Rate Records for Analysis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>