force-app/main/default/objects/sc_ext__Settings_Configuration__c/fields/sc_ext__Platform_Encryption_API_Version__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Platform_Encryption_API_Version__c</fullName>
    <label>Platform Encryption API Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>