force-app/main/default/objects/sc_ext__Settings_Configuration__c/fields/sc_ext__Sync_Classification_Levels__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Sync_Classification_Levels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync classification levels</label>
    <type>Checkbox</type>
</CustomField>