force-app/main/default/objects/sc_ext__Settings_Configuration__c/fields/sc_ext__Use_Guided_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Use_Guided_Risk_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Guided Risk Assessment</label>
    <type>Checkbox</type>
</CustomField>